infra/kubernetes/apps/company-web/overlays/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: agma-company-web
spec:
  rules:
    - host: agma.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: agma-company-web
                port:
                  name: http
